--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=car-service-app
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/car_service
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JWT
+jwt.secret=dG9wc2VjcmV0a2V5
+jwt.expiration=3600000
